/*
 * $Id: ChangeLog,v 1.28 2002/10/06 05:00:24 andy_wos Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-10-06 18:00 UCT+0530 Pritpal Bedi <vouch32@vouchcac.com>
   * _WinINet.c
     * FtpFindFirstFile()
     * InternetFindNextFile()
       Now these functions return the directory info in an array
       of three elements, viz, cFileName, nDirOrFile, nSizeInBytes.

2002-10-06 15:02 UCT+1000 AJ Wos <andrwos@aust1.net>
   * _WinIni.c
    * corrected insufficient buffer size in GetPrivateProfileString()
      and GetProfileString() 

2002-10-03 23:42 UCT -0300 Augusto Infante <systems@quesoro.com>
   + _WinTree.c

2002-10-03 14:50 UCT -0300 Augusto Infante <systems@quesoro.com>
   * WinTBar.prg
     * WCHAR szText[80] ---> char szText[80]

2002-09-28 23:00 UCT+0530 Pritpal Bedi <vouch32@vouchcac.com>
   * _WinINet.c
     + Added prototypes for every function
     * Some bug fixes
     
2002-09-28 16:45 UCT+0530 Pritpal Bedi <vouch32@vouchcac.com>
   + _WinINet.c
     * Internet functions related with FTP functionality.
   + WinINet.ch
     * Manifest constants for _WinINet.c
   * Makefile.bc
     * Updated to include _WinINet.c
       
       Please do forgive me if there are mistakes. It is my first endeavour
       at this type of work. Most of the functions are tested and are 
       working barring a few ones, which I hope you experts will set right.
       
2002-09-28 18:51 UCT+1000 AJ Wos <andrwos@aust1.net>
   * Windows.ch
     + completed CB*_* definitions for combo boxes

2002-09-27 19:37 UCT -0300 Augusto Infante <systems@quesoro.com>
   * TabCtrl.ch
     + WC_TABCONTROL definition for SysTabControl32

2002-09-26 01:53 UCT -0300 Augusto Infante <systems@quesoro.com>
   * Windows.ch
     + TPM_* for TrackPopupMenu
   * WinLview.ch
     - TPM_ includes

2002-09-25 16:50 UCT+1000 AJ Wos <andrwos@aust1.net>